# pyuvcgen

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
scripts/makefiles/: Makefile.uvm
scripts/setup/: setup_python_env.sh
src/pyuvcgen/: __init__.py  __main__.py  generator.py
src/pyuvcgen/templates/uvc_template/: README.md  sve.f  uvc.f
src/pyuvcgen/templates/uvc_template/env/: top_env.sv  top_scoreboard.sv  top_vsqr.sv
src/pyuvcgen/templates/uvc_template/scripts/makefiles/: Makefile.vivado  Makefile.xilinx
src/pyuvcgen/templates/uvc_template/scripts/setup/: setup_xilinx_eda.sh
src/pyuvcgen/templates/uvc_template/scripts/vivado/: probe.tcl  run.tcl
src/pyuvcgen/templates/uvc_template/sv/: agent.sv  config.sv  driver.sv  if.sv  monitor.sv  pkg.sv  sequence_item.sv  sequencer.sv
src/pyuvcgen/templates/uvc_template/tests/: top_test.sv  top_test_pkg.sv  top_test_vseq.sv
src/pyuvcgen/templates/uvc_template_snps/: README.md  run.tcl  sve.f  uvc.f
src/pyuvcgen/templates/uvc_template_snps/env/: top_coverage.sv  top_env_config.sv  top_env_pkg.sv
src/pyuvcgen/templates/uvc_template_snps/scripts/makefiles/: Makefile.vcs
src/pyuvcgen/templates/uvc_template_snps/scripts/setup/: setup_synopsys_eda.tcsh
src/pyuvcgen/templates/uvc_template_snps/scripts/verdi/: verdi.tcl
src/pyuvcgen/templates/uvc_template_snps/sv/: config.sv  driver.sv  monitor.sv  types.sv
src/pyuvcgen/templates/uvc_template_snps/sv/seqlib/: sequence_base.sv
src/pyuvcgen/templates/uvc_template_snps/tb/: tb.sv
tests/yaml/: uvc.yaml
